# Spice-project

./: .gitignore  read.me
codes/: .FractionalOrderDE.h.swp  .dd.cpp.swp  FractionalController.h  FractionalOrderDE.h  OrdinaryController.h  OrdinaryDE.h  a.out  dd.cpp  main.cpp
codes/Final/SpiceGrammer/: TLexer.g4
codes/Parser/: Example.net  Parser.h  TLexer.g4  TParser.g4  a.out  lex.yy.c  main.cpp  main.l  run.sh
codes/Parser/.antlr/: TLexer.java  TParser.java
codes/fit-taherzadeh/: SDC.py  b7-selfdischarge - Copy.txt  b7-selfdischarge-original.txt  b7-selfdischarge.txt  b7-selfdischarge_back.txt  fitparametersb7-selfdischarge_back.txt.json  ocp_fit.py
codes/fractionalcode/: .10-1OCP.csv.swo  .10-1OCP.csv.swp  .FractionalOrderDE.h.swp  FractionalModels.h  FractionalOrderDE.h  FractionalSolver.h  MathAux.h  Models.h  OptimizeFractional.h  a.out  ackley.cpp  bfgs_test.cpp  cvs.h  log  main2.cpp  models_test.cpp  optimize.cpp  optimize_fractional.cpp  testcvs.cpp
codes/fractionalcode/datas/: 10-1OCP.csv
codes/fractionalcode/surplus/: OrdinaryController.h  ackley.cpp
codes/solver/: .Circuit.cpp.swp  .Solve.cpp.swp  BaseComponent.hpp  CLASS_HIERARCHY.md  CMakeLists.txt  CPE.hpp  Capacitor.hpp  Circuit.cpp  Circuit.hpp  Components.cpp  Components.hpp  DESIGN_ANALYSIS.md  DESIGN_ANALYSIS_z.ai.md  Example.net  Example1.net  Integrators.hpp  Readme.txt  Resistor.hpp  Solve.cpp  Utility.cpp  Utility.hpp  VoltageSource.hpp  a.out  basecircuit.cpp  basecircuit.hpp  basecomponent.hpp  build.sh  capacitor.hpp  circuit.cpp  circuit.hpp  components.hpp  integrators.hpp  main.cpp  resistor.hpp  run.sh  solve.cpp
codes/solver/Parser/: main.cpp.ack
codes/solver/Parser/.antlr/: ExprLexer.java  test.interp
codes/solver/components/: BaseComponent.cpp  BaseComponent.hpp  CPE.cpp  CPE.hpp  Capacitor.cpp  Capacitor.hpp  Circuit.cpp  Circuit.hpp  ComplexComponent.cpp  ComplexComponent.hpp  Components.cpp  Components.hpp  CurrentSource.hpp  Integrators.cpp  Integrators.hpp  Resistor.cpp  Resistor.hpp  Utility.cpp  Utility.hpp  VoltageSource.hpp
codes/solver/parser/: Example1.net  TLexer.g4  TParser.g4  a.out  main.cpp.back  parser.h  run.sh
codes/solver/parser/.antlr/: TLexer.interp  TLexer.java  TLexer.tokens  TParser.interp  TParser.tokens  testLexer.interp  testLexer.java  testParser.java
codes/solver/surpass/: basecircuit.hpp  circuit_old.cpp  circuit_old.hpp
litrature/: readme
reports/1403-orojects/: .~lock.Projects-1403.docx#  Projects-1403-spice.docx  Projects-1403.docx
reports/fractional-derivations/: 2301.00037  2301.aux  2301.blg  2301.out  2301.toc  draft1.bib  main.aux  main.bbl  main.blg  main.dvi  main.out  main.tex
